# rag-pipeline-experimentation

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.py  blog_RAG_System_Experiments.md  pyproject.toml  rag_pipeline_experimentation.md
.github/workflows/: ci.yml
config/experiments/: baseline.yaml  smoke.yaml
data/: qrels_filtered.json  qrels_poc.json  qrels_smoke.json
data/indices/fixed_512_ol64__minilm-l6__dense/faiss_index/: chunks.pkl
data/indices/fixed_512_ol64__minilm-l6__hybrid_a0.6/faiss_index/: chunks.pkl
data/indices/fixed_512_ol64__mpnet-base__dense/faiss_index/: chunks.pkl
data/indices/fixed_512_ol64__mpnet-base__hybrid_a0.6/faiss_index/: chunks.pkl
data/indices/recursive_512_ol100__minilm-l6__dense/faiss_index/: chunks.pkl
data/indices/recursive_512_ol100__minilm-l6__hybrid_a0.6/faiss_index/: chunks.pkl
data/indices/recursive_512_ol100__mpnet-base__dense/faiss_index/: chunks.pkl
data/indices/recursive_512_ol100__mpnet-base__hybrid_a0.6/faiss_index/: chunks.pkl
data/indices/sliding_w10_s5__minilm-l6__dense/faiss_index/: chunks.pkl
data/indices/sliding_w10_s5__minilm-l6__hybrid_a0.6/faiss_index/: chunks.pkl
data/indices/sliding_w10_s5__mpnet-base__dense/faiss_index/: chunks.pkl
data/indices/sliding_w10_s5__mpnet-base__hybrid_a0.6/: documents.json
data/indices/sliding_w10_s5__mpnet-base__hybrid_a0.6/faiss_index/: chunks.pkl
docs/: blog_post.md  engineering.md  failures.md  methodology.md  setup.md  tradeoffs.md
experiments/: iteration_log.jsonl
experiments/results/: fixed_512_ol64__minilm-l6__bm25.json  fixed_512_ol64__minilm-l6__dense.json  fixed_512_ol64__minilm-l6__hybrid_a0.6.json  fixed_512_ol64__mpnet-base__bm25.json  fixed_512_ol64__mpnet-base__dense.json  fixed_512_ol64__mpnet-base__hybrid_a0.6.json  recursive_512_ol100__minilm-l6__bm25.json  recursive_512_ol100__minilm-l6__dense.json  recursive_512_ol100__minilm-l6__hybrid_a0.6.json  recursive_512_ol100__mpnet-base__bm25.json  recursive_512_ol100__mpnet-base__dense.json  recursive_512_ol100__mpnet-base__hybrid_a0.6.json  sliding_w10_s5__minilm-l6__bm25.json  sliding_w10_s5__minilm-l6__dense.json  sliding_w10_s5__minilm-l6__hybrid_a0.6.json  sliding_w10_s5__mpnet-base__bm25.json  sliding_w10_s5__mpnet-base__dense.json  sliding_w10_s5__mpnet-base__hybrid_a0.6.json
notebooks/: colab_eval_grid.ipynb  rag_experimentation_tour.ipynb
scripts/: download_dataset.py  evaluate.py  ingest.py  ingest_grid.py  precompute_queries.py  run_full_pipeline.py  serve.py  sterilize-check.sh
src/: base.py  chunkers_ext.py  config.py  embedders.py  evaluator.py  experiment.py  generator.py  iteration_log.py  judge.py  models.py  pipeline.py  reranker.py  visualizer.py
tests/: test_chunkers_ext.py  test_embedders.py  test_evaluator.py  test_experiment.py  test_pipeline.py
