[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-pipeline-experimentation"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "rag-common @ git+https://github.com/selizondo/rag-common.git",
    "pymupdf>=1.23",
    "llm-utils @ git+https://github.com/selizondo/llm-utils.git",
    "openai>=1.0",
    "instructor>=1.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pandas>=2.0",
    "numpy>=1.24",
    "tiktoken>=0.5",
    "streamlit>=1.25",
    "python-dotenv>=1.0",
    "sentence-transformers>=2.7",  # model weights and tokenizers are versioned by HF; pin floor to prevent silent embedding drift
    "faiss-cpu>=1.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
