[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-pipeline-experimentation"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "rag-common @ git+https://github.com/selizondo/rag-common.git",
    "pymupdf>=1.23",
    "llm-utils @ git+https://github.com/selizondo/llm-utils.git",
    "openai>=1.0",
    "instructor>=1.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pandas>=2.0",
    "numpy>=1.24",
    "tiktoken>=0.5",
    "streamlit>=1.25",
    "python-dotenv>=1.0",
    "sentence-transformers>=2.7",  # model weights and tokenizers are versioned by HF; pin floor to prevent silent embedding drift
    "faiss-cpu>=1.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
constraint-dependencies = [
  "torch<2.3 ; sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "transformers<5 ; sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "sentence-transformers<5 ; sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "numpy<2 ; sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "scikit-learn<1.6 ; sys_platform == 'darwin' and platform_machine == 'x86_64'",
]
